# uk-portion-of-ICAO

./: .gitignore  CHANGELOG.md  README.md  bool_minimal_middle.py  fast.py  nats-code.cabal  test_fast.py
app/: Main.hs
formal/: Main.lean  README.md  lake-manifest.json  lakefile.toml
formal/Formal/: Categorical.lean  IndexedSpec.lean
formal/Formal/Categorical/: Concrete.lean  Core.lean  Extraction.lean  Implementation.lean  IntervalCombined.lean  Model.lean  README.md  Reconciliation.lean
formal/Formal/Categorical/Core/: PathCategory.lean  Proofs.lean
formal/Formal/Categorical/Reconciliation/: FrontRecursive.lean
formal/Formal/Categorical/Reconciliation/FrontRecursive/: Base.lean  Complete.lean  Nodup.lean  Sound.lean
