cabal-version:      3.4
name:               nats-code
version:            0.1.0.0
synopsis:           Extract ICAO portion of flight plan
-- description:
homepage:           jameshaydon.github.io/nats-fail
license:            NONE
author:             James Henri Haydon
maintainer:         james.haydon@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nats-code
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0
    hs-source-dirs:   app
    default-language: GHC2021
